feat: DB Access (w mybatis) RabbitMQ integration Image Upload (multipart formdata) CSRF for POST

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=projectTS-backend
+
+#server.servlet.encoding.charset=UTF-8
+#server.servlet.encoding.enabled=true
+#server.servlet.encoding.force=true
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_UESR}
+spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.mapper-locations=classpath:mappers/*.xml
+# mybatis.configuration.cache-enabled=true
+mybatis.type-aliases-package=org.researchandreview.projecttsbackend.model
+
+spring.rabbitmq.host=${MQ_URL}
+spring.rabbitmq.port=${MQ_PORT}
+spring.rabbitmq.username=${MQ_USER}
+spring.rabbitmq.password=${MQ_PASS}
+spring.rabbitmq.virtual-host=${MQ_VHOST}
